--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="wrapper">
       <div class="header__content">
-        <img class="header__logo" src="./static/images/logo.svg" alt="">
+        <img class="header__logo" src="" alt="">
         <input type="checkbox" id="menu" class="menu__checkbox">
         <ul class="menu">
           <li class="menu__item">
